fixed slider buttons show pointer on hover; truncate slider title

--- a/src/sass/components/_slider-home-page.sass
+++ b/src/sass/components/_slider-home-page.sass
@@ -63,6 +63,7 @@
     bottom: 60px
     z-index: 100
     button
+      cursor: pointer
       &::before
         color: $white
         opacity: 1
